fixed site-navigation and added main.js to footer

--- a/themes/tjay/assets/scss/abstracts/_tokens.scss
+++ b/themes/tjay/assets/scss/abstracts/_tokens.scss
@@ -61,6 +61,22 @@ $nav-link-padding: var(--size-xs) var(--size-s);
 
 
 
+// -----------------------------------------------------------------------------
+// Hamburger menu
+// -----------------------------------------------------------------------------
+
+$hamburger-bar-width: var(--size-m);
+$hamburger-bar-height: 4px;
+
+$hamburger-gap: 4px;
+$hamburger-padding: var(--size-2xs) var(--size-3xs);
+$hamburger-animation-timing: 200ms ease-in-out;
+
+$hamburger-foreground: var(--dark);
+$hamburger-background: var(--light-gray);
+
+
+
 
 
 // -----------------------------------------------------------------------------
