--- a/public/css/style.css
+++ b/public/css/style.css
@@ -262,10 +262,30 @@ input, textarea {
   padding: var(--_card-padding);
 }
 
+.site-header {
+  padding: var(--size-s) 5dvw;
+}
+.site-header__inner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.site__logo {
+  color: var(--heading-font-color);
+  font-size: var(--fs-300);
+  font-weight: var(--fw-bold);
+  text-transform: uppercase;
+  letter-spacing: 0.0375rem;
+  flex: 1;
+  text-decoration: none;
+}
+
 .site-nav {
   position: relative;
+  display: none;
   width: 100%;
-  display: flex;
+  order: 3;
 }
 .site-nav__list {
   list-style-type: none;
@@ -273,9 +293,15 @@ input, textarea {
   flex-wrap: wrap;
   align-items: center;
 }
+.site-nav__item {
+  position: relative;
+  width: 100%;
+  text-align: center;
+}
 .site-nav__link {
   --_nav-link-color: var(--nav-link-color, var(--light-gray));
   --_nav-link-padding: var(--nav-link-padding, var(--size-xs) var(--size-s));
+  display: block;
   color: var(--_nav-link-color);
   padding: var(--_nav-link-padding);
   text-decoration: none;
@@ -284,6 +310,93 @@ input, textarea {
   --nav-link-color: var(--primary);
 }
 
+.site-nav__item > .button {
+  padding: var(--size-xs) var(--size-s);
+}
+
+.site-nav.open {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+  }
+  .site-nav, .site-nav__item {
+    width: auto;
+  }
+  .site-nav__item {
+    text-align: start;
+  }
+}
+.hamburger-menu {
+  --_bar-width: var(--bar-width, var(--size-m));
+  --_bar-height: var(--bar-height, 4px);
+  --_hamburger-gap: var(--hamburger-gap, 4px);
+  --_hamburger-height: calc((var(--_bar-height) * 3) + (var(--_hamburger-gap) * 2));
+  --_hamburger-padding: var(--hamburger-padding, var(--size-2xs) var(--size-3xs));
+  --_foreground: var(--foreground, var(--dark));
+  --_background: var(--background, var(--light-gray));
+  --_animation-timing: var(--animation-timing, 200ms ease-in-out);
+  --_x-width: calc(var(--_hamburger-height) * 1.41421356237);
+  appearance: none;
+  display: flex;
+  flex-direction: column;
+  gap: var(--_hamburger-gap);
+  width: max-content;
+  cursor: pointer;
+  border: 0;
+  order: 2;
+  outline: 0;
+  padding: var(--_hamburger-padding);
+}
+
+.hamburger-menu::before,
+.hamburger-menu::after,
+.hamburger-menu input {
+  content: "";
+  width: var(--_bar-width);
+  height: var(--_bar-height);
+  background-color: var(--_background);
+  transform-origin: left center;
+  border-radius: 9999px;
+  transition: opacity var(--_animation-timing), width var(--_animation-timing), rotate var(--_animation-timing), translate var(--_animation-timing);
+}
+
+.hamburger-menu input {
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+}
+
+.hamburger-menu.open::before {
+  rotate: 45deg;
+  width: var(--_x-width);
+  translate: 0 calc(var(--_bar-height) / -2);
+}
+.hamburger-menu.open input {
+  opacity: 0;
+  width: 0;
+}
+.hamburger-menu.open::after {
+  rotate: -45deg;
+  width: var(--_x-width);
+  translate: 0 calc(var(--_bar-height) / 2);
+}
+
+.hamburger-menu:has(input:focus-visible)::before,
+.hamburger-menu:has(input:focus-visible)::after,
+.hamburger-menu input:focus-visible {
+  border: 1px solid var(--_background);
+  box-shadow: 0 0 0 1px var(--_foreground);
+}
+
+@media screen and (min-width: 768px) {
+  .hamburger-menu {
+    display: none;
+  }
+}
 .flex-group {
   --_flex-group-col-gap: var(--flex-group-col-gap, var(--size-m));
   --_flex-group-row-gap: var(--flex-group-row-gap, calc(var(--size-m) / 2));
