--- a/themes/tjay/layouts/_default/baseof.html
+++ b/themes/tjay/layouts/_default/baseof.html
@@ -2,10 +2,10 @@
 <html lang="{{ or site.Language.LanguageCode site.Language.Lang }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 {{ partial "head.html" . }}
 <body>
-  {{ partial "site-header.html" . }}
+  {{ partial "site/header.html" . }}
   <main class="page">
     {{ block "main" . }}{{ end }}
   </main>
-  {{ partial "site-footer.html" . }}
+  {{ partial "site/footer.html" . }}
 </body>
 </html>
