--- a/themes/tjay/layouts/partials/site/header.html
+++ b/themes/tjay/layouts/partials/site/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
     <div class="site-header__inner">
-        <a href="{{ .Site.BaseURL }}" class="site__logo">{{ site.Title }}</a>
+        <a href="/" class="site__logo">{{ site.Title }}</a>
         {{ partial "site/nav.html" . }}
         <lable id="hamburgerMenu" class="hamburger-menu">
             <input type="checkbox">
